data/derived/comb/progs/unify/prog8902.ml.out
Characters 94-98:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a -> 'b
       The type variable 'a occurs inside 'a -> 'b
